Layout van zoekbalk aangepast

--- a/frontend/src/pages/Student/SpeedDates.css
+++ b/frontend/src/pages/Student/SpeedDates.css
@@ -499,3 +499,19 @@
 .delete-btn i {
   margin-right: 5px; /* Ruimte tussen icoon en tekst */
 }
+.zoekbalk input {
+  width: 100%;
+  padding: 12px 20px;
+  border: 1px solid #e9ecef;
+  border-radius: 8px;
+  font-size: 1rem;
+  background-color: var(--light-color);
+  transition: all 0.3s ease;
+}
+
+
+.zoekbalk input:focus {
+  outline: none;
+  border-color: var(--primary-color);
+  box-shadow: 0 0 0 3px rgba(67, 97, 238, 0.2);
+}
