--- a/frontend/src/pages/Student/SpeedDates.css
+++ b/frontend/src/pages/Student/SpeedDates.css
@@ -41,14 +41,12 @@
     margin-bottom: 2.5rem;
   }
   .header h1 {
-    font-size: 2.5rem;
     color: var(--dark-color);
     margin-bottom: 0.5rem;
     font-weight: 700;
   }
   
   .header p {
-    font-size: 1.1rem;
     color: #6c757d;
   }
   
@@ -60,7 +58,6 @@
   }
   
   .speeddates__title {
-    font-size: 2.5rem;
     color: var(--dark-color);
     margin-bottom: 0.5rem;
     font-weight: 700;
@@ -70,10 +67,12 @@
   }
   
   .speeddates__subtitle {
-    font-size: 1.2rem;
-    color: #7f8c8d;
+      color: #7f8c8d;
+      font-weight: 400;
+      margin-top: 0.5rem;
+      text-align: center;
   }
-
+  
   .filter-toggle {
     background-color: var(--primary-color);
     color: white;
